# secugenie

./: .env.example  .gitignore  README.md  pyproject.toml
bootcamp/lesson_1_1_langchain_core/: README.md  ask_llm.py  chat.py
bootcamp/lesson_1_2_prompt_patterns/: README.md  few_shot.py
