[tool.poetry]
name = "secugenie"
version = "0.1.0"
description = "SecuGenie curriculum"
authors = ["ArgVoid <8474813+ArgVoid@users.noreply.github.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = ">=0.3,<0.4"
openai = "^1.93.2"
mistralai = "^1.9.1"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = {version = "^0.12.2", extras = ["format"]}

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
lint.ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
